2010-07-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Bump to r160250.

2010-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Make both mesa sha1s we have in this file consistent with eachother.

2010-07-05  David Reveman  <davidr@novell.com>

	* README: Update mesa revision.

2010-07-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Bump mono/mcs/mono-basic to r159895.

2010-07-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* autogen.sh: Disable sgen to speed up the mono build.

2010-06-22  Sebastien Pouliot  <sebastien@ximian.com>

	* README: Bump mono/mcs/mono-basic to r159337 for JB's linq fixes

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Bump mono/mcs/mono-basic to r159132 to get SL4 final API.

2010-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* README: Bump mono/mcs/mono-basic to r158874

2010-05-28  Alan McGovern  <amcgovern@novell.com>

	* README: Bump the mono requirement to get a fix for mcs bug
	  609049

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.ac: Build libmoon with curl flags too.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.ac: Build libmoon with curl libs, and remove the curl Makefile.

2010-05-19  Andreia Gaita  <avidigal@novell.com>

	* README: Bump mono/mcs to r157525, WCF fixes

2010-05-18  Andreia Gaita  <avidigal@novell.com>

	* README: Bump mono/mcs to r157368, WCF fixes

2010-05-14  Sebastien Pouliot  <sebastien@ximian.com>

	* README: Bump mono/mcs to r157360 and remove glib=system from
	instructions

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Bump mono/mcs to r157252.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* configure.ac (LUNAR_LAUNCHER_CFLAGS): add MONO_CFLAGS, since
	lunar-launcher's build needs to be able to find mono-config.h.

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.ac: Show any failure reason for curl.

2010-05-10  Larry Ewing  <lewing@novell.com>
