@@ -1,3 +1,7 @@
+2010-07-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* README: Bump to r160387
+
 2010-07-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* README: Bump to r160250.
